[gd_scene load_steps=2 format=3 uid="uid://bf1hit2og8j1q"]

[ext_resource type="Script" uid="uid://kte8qu2n82eb" path="res://elements/import_export_handler/import_export_handler.gd" id="1_7yfgu"]

[node name="ImportExportHandler" type="Node"]
script = ExtResource("1_7yfgu")

[node name="ImportDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.gp-skill.json")
use_native_dialog = true

[node name="ExportDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
initial_position = 1
access = 2
filters = PackedStringArray("*.gp-skill.json")
use_native_dialog = true

[node name="InvalidNodeDialog" type="AcceptDialog" parent="."]
initial_position = 1
always_on_top = true
popup_window = true
sharp_corners = true
force_native = true
dialog_text = "Error: Some nodes are invalid. Make sure every node has a key set."

[connection signal="file_selected" from="ImportDialog" to="." method="_on_import_dialog_file_selected"]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_export_dialog_file_selected"]
